# f5rocm

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  tauri.conf.json
src/: lib.rs  main.rs
